# bevy-3d-helpers

./: Cargo.toml
assets/: model0.blend  model0.blend1  model0.mtl  model1.blend  model1.blend1  model1.mtl  model2.blend  model2.blend1  model2.mtl
src/: conversion.rs  data.rs  main.rs  plugin.rs  projection.rs
src/plugins/: camera.rs  loader.rs  mod.rs  renderer.rs
src/renderer/: material.rs  mesh.rs  mod.rs  util.rs
src/shaders/: mod.rs  scene.frag  scene.vert
